--- a/.config/yasb/config.yaml
+++ b/.config/yasb/config.yaml
@@ -14,8 +14,8 @@ bars:
       position: "top"
       center: false
     blur_effect:
-      enabled: true
-      acrylic: false
+      enabled: false
+      acrylic: true
       dark_mode: true
       round_corners: true
       border_color: None
@@ -24,16 +24,16 @@ bars:
       windows_app_bar: true
     dimensions:
       width: "100%"
-      height: 32
+      height: 30
     padding:
-      top: 4
-      left: 6
-      bottom: 0
-      right: 6
+      top: -4
+      left: 16
+      bottom: -24
+      right: 16
     widgets:
-      left: ["komorebi_workspaces","active_window"]
-      center: ["clock","apps","cpu","memory"]
-      right: ["traffic","heater","update","taskbar","github","weather","whkd","volume","power_menu"]
+      left: ["active_window","traffic"]
+      center: ["cpu","clock","memory"]
+      right: ["heater","weather","volume","power_menu"]
 widgets:
   heater:
     type: "yasb.heater.HeaterWidget"
@@ -164,12 +164,12 @@ widgets:
   weather:
     type: "yasb.weather.WeatherWidget"
     options:
-      label: "<span>{icon}</span> {temp_c}"
-      label_alt: "{location}: Min {min_temp_c}, Max {max_temp_c}, Humidity {humidity}"
+      label: "<span>{icon}</span> {temp}"
+      label_alt: "Min {min_temp}, Max {max_temp}, Humidity {humidity}"
       api_key: "24b6c2cda6d84066b0304531241908"
       update_interval: 600
       hide_decimal: true
-      location: env      
+      location: env
       callbacks:
         on_left: "toggle_label"
       icons:
@@ -227,19 +227,6 @@ widgets:
         - { icon: "\ueb03", launch: "cmd /c Taskmgr" }
         - { icon: "\uf489", launch: "wt" }
         - { icon: "\uf1ff",launch: "C:\\Users\\simon\\AppData\\Local\\Discord\\Update.exe --processStart Discord.exe" }
-  github:
-    type: "yasb.github.GithubWidget"
-    options:
-      label: "<span>\ueba1</span>"
-      label_alt: "Notifications {data}"
-      token: env
-      max_notification: 30
-      only_unread: false
-      max_field_size: 54
-      menu_width: 400
-      menu_height: 400
-      menu_offset: 240
-      update_interval: 60
   taskbar:
     type: "yasb.taskbar.TaskbarWidget"
     options:
